# TheGameOfLife

./: .gitignore  CMakeLists.txt  GameField.cpp  GameField.h  GameFieldIO.cpp  GameFieldIO.h  GameOfLifeConsoleInterface.cpp  GameOfLifeConsoleInterface.h  GameRules.cpp  GameRules.h  Logger.cpp  Logger.h  gameoflife.h  main.cpp
game/: FileFormatException.cpp  FileFormatException.h  GameField.cpp  GameField.h  GameFieldIO.cpp  GameFieldIO.h  GameRules.cpp  GameRules.h
logger/: Logger.cpp  Logger.h
test/: GameRulesTest.cpp  Tester.cpp
